--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -1,5 +1,100 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Hola clientes</h1>
+<h1>Clientes</h1>
+
+<div class="container">
+
+    <div class="card mt-3">
+        <h5 class="card-header"><i class="fas fa-user-plus"></i>&nbsp;Añadir cliente</h5>
+        <form action="/clientes" method="post">
+
+            <div class="card-body">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Lantek" required>
+                </div>
+                <div class="mb-3">
+                    <label for="telefono" class="form-label">Telefono</label>
+                    <input type="number" maxlength="8" class="form-control" id="telefono" name="telefono"
+                           placeholder="688452312" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="example@correo.com"
+                           required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="web" class="form-label">Web</label>
+                    <input type="url" class="form-control" id="web" name="web" placeholder="https://example.com"
+                           required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="direccion" class="form-label">Dirección</label>
+                    <input type="text" class="form-control" id="direccion" name="direccion"
+                           placeholder="C/ Brasil, Nº5, 01010"
+                           required>
+                </div>
+                <div class="mb-3">
+                    <label for="ciudad" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" id="ciudad" name="ciudad" placeholder="Madrid" required>
+                </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary w-100"><i class="fas fa-plus-circle"></i>&nbsp;Añadir
+                        cliente
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+    <div class="card mt-3">
+        <h5 class="card-header"><i class="fas fa-users-cog"></i>&nbsp;Lista de clientes</h5>
+        <div class="card-body">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th scope="col" class="text-success">Id</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Telefono</th>
+                    <th scope="col">Correo electrónico</th>
+                    <th scope="col">Web</th>
+                    <th scope="col">Dirección</th>
+                    <th scope="col">Ciudad</th>
+                    <th scope="col" class="text-center text-primary">Editar</th>
+                    <th scope="col" class="text-center text-danger">Borrar</th>
+                </tr>
+                </thead>
+                {% if clientes %}
+                <tbody>
+                {% for cliente in clientes %}
+
+                <tr>
+                    <th scope="row" class="text-success">{{ cliente.id }}</th>
+                    <td>{{ cliente.nombre }}</td>
+                    <td>{{ cliente.telefono }}</td>
+                    <td>{{ cliente.email }}</td>
+                    <td>{{ cliente.web }}</td>
+                    <td>{{ cliente.direccion }}</td>
+                    <td>{{ cliente.ciudad }}</td>
+                    <td class="text-center"><a class="text-primary" href="/cliente/edit?id={{cliente.id}}"><i
+                            class="fa-solid fa-square-pen"></i></a></td>
+                    <td class="text-center"><a class="text-danger" href="/cliente/delete?id={{cliente.id}}"><i
+                            class="fa-solid fa-trash-can"></i></a></td>
+                </tr>
+                {% endfor %}
+
+
+                </tbody>
+                {% endif %}
+
+            </table>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
