--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,8 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS PERSONALIZADO -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 
@@ -14,7 +16,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Módulo CRM</a>
+            <a class="navbar-brand" href="/"><i class="fas fa-box"></i>&nbsp;Módulo CRM</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,18 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Oportunidades</a>
+                        <a class="nav-link {% if request.path == "/" %}active{% endif %}" aria-current="page" href="/"><i class="fas fa-thumbs-up"></i>&nbsp;Oportunidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('etapas') }}">Etapas</a>
-
-                    </li>
+                        <a class="nav-link {% if request.path == "/clientes" %}active{% endif %}" href="{{ url_for('clientes') }}"><i class="fas fa-users"></i>&nbsp;Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('clientes') }}">Clientes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('informes') }}">Informes</a>
+                        <a class="nav-link {% if request.path == "/informes" %}active{% endif %}" href="{{ url_for('informes') }}"><i class="fas fa-signal"></i>&nbsp;Informes</a>
                     </li>
                 </ul>
             </div>
@@ -41,9 +38,12 @@
     </nav>
 </header>
 <main>
+    <div class="container p-3">
 
     {% block content %}
     {% endblock %}
+
+    </div>
 
 
 
