--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,9 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+          integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- CSS PERSONALIZADO -->
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 </head>
 <body>
@@ -24,13 +26,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == "/" %}active{% endif %}" aria-current="page" href="/"><i class="fas fa-thumbs-up"></i>&nbsp;Oportunidades</a>
+                        <a class="nav-link {% if request.path == "/" %}active{% endif %}" aria-current="page"
+                           href="/"><i class="fas fa-thumbs-up"></i>&nbsp;Oportunidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == "/clientes" %}active{% endif %}" href="{{ url_for('clientes') }}"><i class="fas fa-users"></i>&nbsp;Clientes</a>
+                        <a class="nav-link {% if request.path == "/clientes" %}active{% endif %}"
+                           href="{{ url_for('clientes') }}"><i class="fas fa-users"></i>&nbsp;Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == "/informes" %}active{% endif %}" href="{{ url_for('informes') }}"><i class="fas fa-signal"></i>&nbsp;Informes</a>
+                        <a class="nav-link {% if request.path == "/informes" %}active{% endif %}"
+                           href="{{ url_for('informes') }}"><i class="fas fa-signal"></i>&nbsp;Informes</a>
                     </li>
                 </ul>
             </div>
@@ -40,18 +45,17 @@
 <main>
     <div class="container p-3">
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
     </div>
-
 
 
 </main>
 
 
-
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
