--- a/templates/oportunidades.html
+++ b/templates/oportunidades.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="etapa" class="form-label">Etapa</label>
-                        <select class="form-select" aria-label="Selecciona una etapa..." id="etapa">
+                        <select class="form-select" aria-label="Selecciona una etapa..." id="etapa" name="etapa">
                             <option value="nuevo" selected>Nuevo</option>
                             <option value="calificado">Calificado</option>
                             <option value="propuesta">Propuesta</option>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="prioridad" class="form-label">Prioridad</label>
-                        <select class="form-select" aria-label="Selecciona una prioridad..." id="prioridad">
+                        <select class="form-select" aria-label="Selecciona una prioridad..." id="prioridad" name="prioridad">
                             <option value="baja" class="bg-success text-white" selected>Baja</option>
                             <option value="media" class="bg-warning text-dark">Media</option>
                             <option value="alta" class="bg-danger text-white">Alta</option>
